force-app/main/default/objects/Attribute_Mapping__c/Attribute_Mapping__c.object-meta.xml
<CustomObject>
    <label>Attribute Mapping</label>
    <nameField>
        <displayFormat>AM-{000000}</displayFormat>
        <label>Attribute Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>