force-app/main/default/objects/Attribute_Mapping__c/fields/Attribute_Master__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute Master</label>
    <referenceTo>Attribute_Master__c</referenceTo>
    <relationshipLabel>Attribute Mappings</relationshipLabel>
    <relationshipName>Attribute_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>