force-app/main/default/objects/Attribute_Mapping__c/fields/Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute Value</label>
    <referenceTo>Attribute_Value__c</referenceTo>
    <relationshipLabel>Attribute Mappings</relationshipLabel>
    <relationshipName>Attribute_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>